// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component -> View should render the View in first loading state without throwing an error 1`] = `
<Fragment>
  <GlobalStyleComponent />
  <styles__Container>
    <Connect(Component) />
    <styles__Control>
      <Connect(Component)
        location="about"
      />
    </styles__Control>
    <styles__Media
      location="about"
    >
      <styles__ShutterTop
        firstMediaLoading={true}
      />
      <styles__ShutterBottom
        firstMediaLoading={true}
      />
      <styles__MediaLoadingMessage
        firstMediaLoading={true}
      >
        Hello!
      </styles__MediaLoadingMessage>
      <Memo()
        loading={true}
      />
    </styles__Media>
  </styles__Container>
</Fragment>
`;

exports[`Component -> View should render the View in loading state without throwing an error 1`] = `
<Fragment>
  <GlobalStyleComponent />
  <styles__Container>
    <Connect(Component) />
    <styles__Control>
      <Connect(Component)
        location="about"
      />
    </styles__Control>
    <styles__Media
      location="about"
    >
      <styles__ShutterTop
        firstMediaLoading={false}
      />
      <styles__ShutterBottom
        firstMediaLoading={false}
      />
      <styles__MediaLoadingMessage
        firstMediaLoading={false}
      >
        Hello!
      </styles__MediaLoadingMessage>
      <Memo()
        loading={true}
      />
    </styles__Media>
  </styles__Container>
</Fragment>
`;

exports[`Component -> View should render the View without throwing an error 1`] = `
<Fragment>
  <GlobalStyleComponent />
  <styles__Container>
    <Connect(Component) />
    <styles__Control>
      <Connect(Component)
        location="about"
      />
    </styles__Control>
    <styles__Media
      location="about"
    >
      <styles__ShutterTop
        firstMediaLoading={false}
      />
      <styles__ShutterBottom
        firstMediaLoading={false}
      />
      <styles__MediaLoadingMessage
        firstMediaLoading={false}
      >
        Hello!
      </styles__MediaLoadingMessage>
      <Memo()
        loading={false}
      />
    </styles__Media>
  </styles__Container>
</Fragment>
`;
